# jira-cli

./: pyproject.toml
jira_cli/: cli.py  client.py  config.py  formatter.py
