[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-cli"
version = "0.1.0"
description = "CLI tool to fetch Jira tickets by ID, designed for AI agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
jira-cli = "jira_cli.cli:cli"
